--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "selenium_webdriver"
 version = "0.1.0"
 authors = ["Sergey Bibikov <sergey.bibikov.92@mail.ru>"]
 edition = "2018"
-description = "A crate to interact with the selenium server"
+description = "A crate to interact with the selenium server and write automated UI scripts and tests"
 license = "Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
