--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Sergey Bibikov <sergey.bibikov.92@mail.ru>"]
 edition = "2018"
 description = "A crate to interact with the selenium server and write automated UI scripts and tests"
 license = "Apache-2.0"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
