--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 description = "A crate to interact with the selenium server and write automated UI scripts and tests"
 license = "Apache-2.0"
 readme = "README.md"
-documentation = "https://github.com/SergeyBibikov/rust-selenium"
+documentation = "https://docs.rs/selenium_webdriver/"
 keywords = ["selenium", "testing", "browser", "automation", "webdriver"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
